# autohotpy

./: .gitignore  README.md  bbb.txt  pyproject.toml  tessst_ahp.py  test_ahp.py  test_slice.py  test_typing.py  testit.ahk  tests.ahk  thing.ahk
.github/workflows/: python-app.yml
autohotpy/: __init__.py  __main__.py  _ahk_object.py  _ahkdll.py  _dtypes.py  _script_injection.py  _unset_type.py  ahk.py  ahk.pyi  ahk_instance.py  ahk_obj_factory.py  ahk_object.py  ahk_run.py  ahk_script.py  communicator.py  exceptions.py  func_caller.py  global_state.py  main.py  references.py
autohotpy/communicator/: ahkdll.py  communicator.py  dtypes.py  hotkey_factory.py  references.py  script_injection.py
autohotpy/communicator/script_inject/: Callbacks.py  a_globals.ahk  a_globals.py  callbacks_.py  create_script.py  py_call.ahk  py_call.py  py_communicator.ahk  py_communicator.py  py_object.ahk  py_object.py  py_special.ahk
autohotpy/convenience/: __init__.py  map_view.py  py_lib.py
autohotpy/proxies/: _cached_prop.py  _copying.py  _seq_iter.py  _sqr_brac_syntax.py  ahk_obj_factory.py  ahk_object.py  ahk_script.py  var_ref.py
autohotpy/static_typing/: __init__.pyi  ahk_moduletype.pyi
autohotpy/static_typing/classes/: __init__.pyi  array.pyi  buffer.pyi  class_.pyi  com_obj.pyi  error.pyi  file.pyi  func.pyi  gui.pyi  inputhook.pyi  map.pyi  menu.pyi  object_.pyi  protocols.pyi  regex_match_info.pyi
tests/: test_autohotpy.ahk  test_autohotpy.py  test_compare.py  test_errors.ahk  test_errors.py  test_pickle.py  test_unset.py
(+2 files in other folders)
